# image-processing-service

./: .gitignore  Dockerfile  README.md  compose.yml  env.example  pyproject.toml  start.sh
image_processing_service/: celery.py  database.py  main.py  models.py  security.py  settings.py  tasks.py
image_processing_service/routers/: auth_router.py  image_router.py
image_processing_service/schemas/: auth_schemas.py  image_schemas.py  image_transform_schemas.py  user_schemas.py
image_processing_service/services/: exceptions.py  image_service.py  user_service.py
migrations/: env.py
migrations/versions/: 18b71e704fe9_create_images_table.py  311ec12fad70_add_original_image_id_column.py  68807d688305_create_users_table.py
tests/: conftest.py  factories.py  test_auth.py  test_db.py  test_root.py  test_security.py
tests/test_routers/: test_image.py
