[project]
name = "image-processing-service"
version = "0.1.0"
description = "A service for processing images"
authors = ["Dêvid Teófilo"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "fastapi[standard]>=0.115.11",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.39",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev image_processing_service/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=image_processing_service -vv'
post_test = 'coverage html'
