[project]
name = "image-processing-service"
version = "0.1.0"
description = "A service for processing images"
authors = ["Dêvid Teófilo"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.15.1",
    "fastapi[standard]>=0.115.11",
    "pillow>=11.1.0",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.39",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "factory-boy>=3.3.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev image_processing_service/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=image_processing_service -vv'
post_test = 'coverage html'
